DRILL-8034: Add support for java 17